# godot-cli-control

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  release.sh
.claude/skills/godot-cli-control/: SKILL.md
.claude/skills/godot-cli-control/references/: commands.md  daemon-multi-instance.md  pitfalls.md  python-and-pytest.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
addons/godot_cli_control/: CHANGELOG.md  README.md  plugin.cfg  plugin.gd  plugin.gd.uid
addons/godot_cli_control/bridge/: capture_logger.gd  diagnostics_api.gd  error_codes.gd  game_bridge.gd  game_bridge.gd.uid  input_simulation_api.gd  input_simulation_api.gd.uid  low_level_api.gd  low_level_api.gd.uid  render_api.gd  scene_api.gd  time_api.gd  variant_codec.gd  wait_api.gd
addons/godot_cli_control/tests/: run_gut.py  run_gut.sh  test_init_walkthrough.py  test_init_walkthrough.sh  test_walkthrough.sh
addons/godot_cli_control/tests/gut/: test_diagnostics_api.gd  test_error_codes.gd  test_game_bridge.gd  test_input_simulation_api.gd  test_low_level_api.gd  test_render_api.gd  test_scene_api.gd  test_time_api.gd  test_variant_codec.gd  test_wait_api.gd
docs/superpowers/plans/: 2026-04-29-godot-cli-control-skill.md  2026-05-01-daemon-port-and-lifecycle.md  2026-05-11-ai-friendly-cli-fixes.md  2026-06-04-input-wait-get.md  2026-06-04-leftover-issues-batch.md  2026-06-04-scene-isolation.md  2026-06-05-init-clobber-addon.md  2026-06-05-time-control.md  2026-06-07-broadcast-instance-all.md  2026-06-07-multi-instance-cli.md  2026-06-08-tree-path-subtree.md  2026-06-10-cli-ergonomics-157.md  2026-06-10-daemon-stop-graceful-quit.md  2026-06-10-emit-signal-escape-hatch.md  2026-06-10-macos-occlusion-freeze.md  2026-06-11-send-json-oversize-160.md  2026-06-11-wait-signal-trigger-155.md
docs/superpowers/specs/: 2026-04-29-godot-cli-control-skill-design.md  2026-05-01-daemon-port-and-lifecycle-design.md  2026-06-04-input-wait-get-design.md  2026-06-04-scene-isolation-design.md  2026-06-04-time-control-design.md  2026-06-05-init-clobber-addon-design.md  2026-06-07-broadcast-instance-all-design.md  2026-06-07-multi-instance-cli-design.md  2026-06-08-tree-path-root-design.md  2026-06-10-cli-ergonomics-157-design.md  2026-06-10-daemon-stop-graceful-quit-design.md  2026-06-10-emit-signal-escape-hatch-design.md  2026-06-10-macos-occlusion-freeze-design.md  2026-06-11-send-json-oversize-160-design.md  2026-06-11-wait-signal-trigger-155-design.md
examples/platformer-demo/: .gitignore  README.md  drive.sh  main.gd  main.tscn  player.gd  project.godot  second.tscn
python/: LICENSE  README.md  pyproject.toml
python/godot_cli_control/: __init__.py  __main__.py  _duration.py  bridge.py  cli.py  client.py  daemon.py  init_cmd.py  pytest_plugin.py  registry.py  runner.py  skills_install.py
python/godot_cli_control/templates/skill/: SKILL.md
python/godot_cli_control/templates/skill/references/: commands.md  error-codes.md  recording.md
python/tests/: conftest.py  test_bridge.py  test_broadcast.py  test_cli.py  test_cli_helpers.py  test_client.py  test_daemon.py  test_duration.py  test_e2e_client_direct.py  test_e2e_diag.py  test_e2e_example.py  test_e2e_input.py  test_e2e_multi_instance.py  test_e2e_record.py  test_e2e_render.py  test_e2e_scene.py  test_e2e_screenshot_gui.py  test_e2e_time.py  test_error_hints.py  test_init.py  test_issue_fixes.py  test_pytest_plugin.py  test_registry.py  test_runner.py  test_skills_install.py
