[project]
name = "godot-cli-control"
dynamic = ["version"]
description = "WebSocket bridge for headless / scripted control of Godot scenes."
readme = "python/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kesar" }]
# keywords / classifiers 仅供 PyPI 搜索与分类筛选；与 GitHub repo topics 对齐。
# 改这里时顺手对一眼 README 顶部徽章 + repo About 的 topics，别让三处漂移。
keywords = [
    "godot",
    "godot4",
    "godot-plugin",
    "gdscript",
    "automation",
    "game-testing",
    "pytest",
    "websocket",
    "json-rpc",
    "ai-agent",
    "llm",
    "screenshot",
    "headless",
    "cli",
]
classifiers = [
    # README 自称 Alpha；升 Beta/Stable 时记得同步这里与 README 的 Status 段。
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    # Python 版本与 CI matrix（.github/workflows/ci.yml）保持一致：实测 3.10–3.13。
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Games/Entertainment",
    # pytest11 entry-point 让它成为一个 pytest 插件 —— 这条 classifier 能把包
    # 收进 PyPI 的 pytest-plugin 分类列表，是面向 pytest 用户的关键发现入口。
    "Framework :: Pytest",
]
dependencies = [
    "websockets>=14,<16",
]

[project.optional-dependencies]
pytest = ["pytest>=7"]
# 全套测试依赖 —— 仅 CI / 开发者本地测试用，包含 pytest-cov、pytest-asyncio 与
# ruff（lint 门禁，issue #83）。普通用户用 `[pytest]` 已够；不要把这些拖到默认安装路径。
test = ["pytest>=7", "pytest-asyncio>=0.21", "pytest-cov>=4", "ruff>=0.6"]

[project.scripts]
godot-cli-control = "godot_cli_control.cli:main"

[project.entry-points.pytest11]
godot-cli-control = "godot_cli_control.pytest_plugin"

# PyPI 项目页侧栏的链接全靠这张表（现在为空 = 侧栏只有一个 PyPI 自身链接）。
# Changelog 指向 addon 内的 CHANGELOG（README「Status」段也引这份），别改成根目录。
[project.urls]
Homepage = "https://github.com/ClaymanTwinkle/godot-cli-control"
Repository = "https://github.com/ClaymanTwinkle/godot-cli-control"
Documentation = "https://github.com/ClaymanTwinkle/godot-cli-control#readme"
Changelog = "https://github.com/ClaymanTwinkle/godot-cli-control/blob/main/addons/godot_cli_control/CHANGELOG.md"
Issues = "https://github.com/ClaymanTwinkle/godot-cli-control/issues"

[tool.pytest.ini_options]
# pytest-asyncio：显式钉死 async fixture 的 loop scope 为 function（= 未来版本默认值），
# 消除 "asyncio_default_fixture_loop_scope is unset" 的 deprecation warning。改这行前
# 先确认没有 module/session-scope 的 async fixture 依赖跨用例共享 loop。
asyncio_default_fixture_loop_scope = "function"
# gui：需要真实显示（开窗）才能跑的端到端测试。普通 unit / headless e2e 不带此
# marker。本地默认随 godot 检测 / GCC_GUI_E2E 未设而 skip；CI 专档（Linux 套
# xvfb 或 macOS runner）设 GCC_GUI_E2E=1 开启。注册在此避免 unknown-marker 警告，
# 也让 `pytest -m "not gui"` 能稳定剔除。
markers = [
    "gui: 需要真实显示的 windowed e2e（screenshot frame_post_draw 路径，issue #64）",
]

# ── lint（ruff）─────────────────────────────────────────────────────────
# issue #83：把 lint 从「开发者本机全局 ruff」收编成 CI 门禁 + dev 依赖，趁全仓
# 基线为 0 锁定收益。规则集刻意只钉 ruff 默认的 pyflakes(F) + pycodestyle 子集
# (E4/E7/E9)——这正是当前 0-error 基线对应的集合；扩到 E501/I/UP/B 会一次性炸出
# 几十条历史报错，与「锁定基线、零噪音引入门禁」的目标相悖。要加规则请单开 PR、
# 连同 autofix 一起 land，别让门禁第一天就红。line-length 仅供 `ruff format`
# 参考（E501 未纳入 select，不构成门禁）。
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["python/godot_cli_control/_version.py"]  # hatch-vcs 生成物

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "python/godot_cli_control/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["python/godot_cli_control"]

# 把 GDScript 插件嵌进 wheel，让 `godot-cli-control init` 能从安装包里把 plugin
# 复制到目标 Godot 项目。位置 _plugin/ 与 init_cmd.locate_plugin_source() 的查找逻辑约定。
[tool.hatch.build.targets.wheel.force-include]
"addons/godot_cli_control" = "godot_cli_control/_plugin"

# sdist 只装构建 wheel 必需的物料；docs/、仓库根 README 不进 sdist。
[tool.hatch.build.targets.sdist]
include = [
    "/python/godot_cli_control",
    "/python/tests",
    "/python/README.md",
    "/addons/godot_cli_control",
    "/LICENSE",
]

# ── 覆盖率 ──────────────────────────────────────────────────────────────
# 用 `coverage run -m pytest` 启动（不是 `pytest --cov`）—— pytest 启动时
# pytest11 entry-point 会自动加载 godot_cli_control.pytest_plugin，进而 import
# bridge/daemon/client；如果用 pytest-cov 那是先 pytest 后 cov，import-time 语句
# 全部 miss。`coverage run` 在 Python 启动时就开 trace，避开这个时序坑。
[tool.coverage.run]
source = ["godot_cli_control"]
branch = true
omit = [
    "*/_version.py",            # hatch-vcs 生成的版本字符串，无逻辑
    "*/__main__.py",             # `python -m godot_cli_control` 入口，靠 walkthrough 覆盖
    "*/templates/*",             # init 命令复制出去的模板，由 walkthrough 测
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
# 80% 是当前 Python 源码大致能稳定到的水准（cli.py 很大但既有测试良好）。
# 调高的话先在本地 `coverage report --fail-under=N` 验过再改。
fail_under = 80
