[project]
name = "godot-cli-control"
version = "0.1.0"
description = "WebSocket bridge for headless / scripted control of Godot scenes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kesar" }]
dependencies = [
    "websockets>=14,<16",
]

[project.scripts]
godot-cli-control = "godot_cli_control.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["godot_cli_control"]
