[project]
name = "godot-cli-control"
dynamic = ["version"]
description = "WebSocket bridge for headless / scripted control of Godot scenes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kesar" }]
dependencies = [
    "websockets>=14,<16",
]

[project.scripts]
godot-cli-control = "godot_cli_control.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "godot_cli_control/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["godot_cli_control"]
