[project]
name = "godot-cli-control"
dynamic = ["version"]
description = "WebSocket bridge for headless / scripted control of Godot scenes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kesar" }]
dependencies = [
    "websockets>=14,<16",
]

[project.optional-dependencies]
pytest = ["pytest>=7"]

[project.scripts]
godot-cli-control = "godot_cli_control.cli:main"

[project.entry-points.pytest11]
godot-cli-control = "godot_cli_control.pytest_plugin"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "godot_cli_control/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["godot_cli_control"]

# 把仓库顶层的 GDScript 插件物料嵌进 wheel，让 `godot-cli-control init`
# 能从安装包里把 plugin 复制到目标 Godot 项目。位置 _plugin/ 与
# init_cmd.locate_plugin_source() 的查找逻辑约定。
[tool.hatch.build.targets.wheel.force-include]
"../addons/godot_cli_control" = "godot_cli_control/_plugin"

# sdist 也带上插件（pip install . from sdist 时 init 仍可工作）
[tool.hatch.build.targets.sdist.force-include]
"../addons/godot_cli_control" = "godot_cli_control/_plugin"
